--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Planets Therapy</title>
 <meta content="Planets Therapy" property="og:title">
 <meta content="Planets Therapy is a 2D, Indie and Therapy game. Take your time and see more infos in website." property="og:description">
-<meta content="https://dr-therapy.github.io/" property="og:url">
+<meta content="https://trexycanaslan.github.io/" property="og:url">
 <meta content="https://media.discordapp.net/attachments/1150513213058846881/1151575659253084210/images-9YUft3VPy93D.png?width=976&height=676" property="og:image">
 <meta content="#43B581" data-react-helmet="true" name="theme-color">
 <meta content="https://media.discordapp.net/attachments/1150513213058846881/1151256190723035217/images-aWc6dAeODB8t.png?width=602&height=642
@@ -117,7 +117,7 @@
                 <a href="#0">Home</a>
             </li></ul>
             <div class="nav-right">
-              <a href="https://cdn.discordapp.com/attachments/1160636252526231663/1160638173714595892/PlanetsTherapy.rar">Download Now! </a>
+              <a href="https://cdn.discordapp.com/attachments/1164227520678342736/1164619970441920572/Planets_Therapy.zip">Download Now! </a>
             </div>
           </div>
         </nav>
@@ -135,7 +135,7 @@
             <div class="single-game-hero text-center">
               <h2 class="game-name">Planets Therapy</h2>
               <div>
-              <a href="https://cdn.discordapp.com/attachments/1160636252526231663/1160638173714595892/PlanetsTherapy.rar"" download alt class="cmn-btn style--two mt-5">Download Beta </a>
+              <a href="https://cdn.discordapp.com/attachments/1164227520678342736/1164619970441920572/Planets_Therapy.zip" download alt class="cmn-btn style--two mt-5">Download Beta </a>
               </div>
             </div>
           </div>
